# conduit-run

./: .gitignore  CHANGELOG.md  conduit-run.cabal
.github/workflows/: conduit-run.yml
src/Data/Conduit/: Run.hs
test/: Main.hs
